--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 <body>
     <!-- HEADER -->
     <header>
-        
+        <div class="top-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-4">logo</div>
+                    <div class="col-xs-4 text-center">menu </div>
+                    <div class="col-xs-4 text-right">menu</div>
+                </div>
+            </div>
+        </div>
+
     </header>
     <!-- END HEADER -->
 
