--- a/index.html
+++ b/index.html
@@ -14,22 +14,120 @@
 <body>
     <!-- HEADER -->
     <header>
+        <!-- Top Nav -->
         <div class="top-nav">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-4">logo</div>
-                    <div class="col-xs-4 text-center">menu </div>
-                    <div class="col-xs-4 text-right">menu</div>
+                    <div class="col-xs-6 col-md-2">
+                        <div class="logo">
+                            <img  src="img/logo.png" alt="logo">
+                        </div>
+                    </div>
+
+                    <div class="hidden-xs hidden-sm col-md-5 text-right">
+                        <ul class="menu-center">
+                            <li>
+                                <a href="#">Products<span class="down-chevron"><i class="fas fa-chevron-down"></i></span></a>
+                            </li>
+
+                            <li>
+                                <a href="#">Customers</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Community<span class="down-chevron"><i class="fas fa-chevron-down"></i></span></a>
+                            </li>
+
+                            <li>
+                                <a href="#">Pricing</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="hidden-xs hidden-sm col-md-5 text-right">
+                        <ul class="menu-right">
+                            <li>
+                                <a href="#">Docs</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Support<span class="down-chevron"><i class="fas fa-chevron-down"></i></span></a>
+                            </li>
+
+                            <li>
+                                <a href="#">Login</a>
+                            </li>
+
+                            <li>
+                                <a class="btn btn-xs" href="#">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 hidden-md hidden-lg text-right">
+                        <div class="burger-menu"><i class="fas fa-bars"></i></div>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <!-- Banner -->
+        <div class="banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="banner-text">
+                            <h1 class="white-text">The simplest cloud platform for developers & teams</h1>
+                            <p class="white-text">Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand</p>
+                        </div>
+                    </div>
+                    <!-- Col Left -->
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="bg-white text-center">
+                            <h3>Deploy your app in seconds. <br>
+                              <span class="lightblue-text">Get started now.</span>
+                            </h3>
+
+                            <!-- Col Right / Form -->
+                            <form action="#">
+                                <div class="form-group">
+                                    <label for="Email" class="sr-only">Email address</label>
+                                    <input type="text" id="input-email" name="input-email" class="form-control"  placeholder="Email">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="Password" class="sr-only">Email address</label>
+                                    <input type="text" id="input-password" name="input-password" class="form-control"  placeholder="password">
+                                  </div>
+                            </form>
+
+                            <!-- Button -->
+                            <div class="form-button">
+                                <button type="button" class="btn btn-primary btn-sm btn-block">Create your account</button>
+                                <button type="button" class="btn btn-default btn-sm btn-block"><span> <!-- Inserire simbolino google--> </span> Sign up with google</button>
+                            </div>
+                            <p>By singing up you agree to the <span class="lightblue-text"><ins>Terms of service</ins>.</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- END HEADER -->
 
     <!-- MAIN -->
     <main>
+        <section class="bg-grey"></section>
 
+        <section class=""></section>
+
+        <section class="bg-grey"></section>
+
+        <section class=""></section>
+
+        <section class="bg-blue-gradient"></section>
+
+        <section class="bg-grey"></section>
+
+        <section class="bg-blue-gradient"></section>
     </main>
     <!-- END MAIN -->
 
