--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <!-- Button -->
                             <div class="form-button">
                                 <button type="button" class="btn btn-primary btn-sm btn-block">Create your account</button>
-                                <button type="button" class="btn btn-default btn-sm btn-block"><span> <!-- Inserire simbolino google--> </span> Sign up with google</button>
+                                <button type="button" id="block-position" class="btn btn-default btn-sm btn-block"><span id="google-logo-button"><img src="img/google-icon.png" alt="google logo"></span> Sign up with google</button>
                             </div>
                             <p>By singing up you agree to the <span class="lightblue-text"><ins>Terms of service</ins>.</span></p>
                         </div>
