--- a/index.html
+++ b/index.html
@@ -307,9 +307,111 @@
             </div>
         </section>
 
-        <section class="services-regions bg-blue-gradient">
-            <div>
+        <section class="services-regions bg-blue-gradient block-pad">
+            <div class="services-title text-center">
                 <h2>Service your customers around the world from 12 regions.</h2>
+            </div>
+
+            <!-- Regions lists -->
+            <div class="regions-list">
+                <div class="container">
+                    <div class="row">
+                        
+                        <!-- Left List -->
+                        <div class="col-xs-12 col-md-6 col-lg-6">
+                            <ul class="left-list list-group block-pad">
+                                <!-- First li -->
+                                <li>
+                                    <span class="text-uppercase">ams2</span>
+                                    <p class="text-capitalize">amsterdam, netherlands</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Second li -->
+                                <li>
+                                    <span class="text-uppercase">ams3</span>
+                                    <p class="text-capitalize">amsterdam, netherlands</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Third li -->
+                                <li>
+                                    <span class="text-uppercase">blr1</span>
+                                    <p class="text-capitalize">bangalore, india</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Fourth li -->
+                                <li>
+                                    <span class="text-uppercase">fra1</span>
+                                    <p class="text-capitalize">frankfurt, german</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Fiveth li -->
+                                <li>
+                                    <span class="text-uppercase">lon1</span>
+                                    <p class="text-capitalize">london, UK</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Last li -->
+                                <li>
+                                    <span class="text-uppercase">nyc1</span>
+                                    <p class="text-capitalize">new york, USA</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Right List -->
+                        <div class="col-xs-12 col-md-6 col-lg-6">
+                            <ul class="right-list list-group block-pad">
+                                <!-- First li -->
+                                <li>
+                                    <span class="text-uppercase">ams2</span>
+                                    <p class="text-capitalize">amsterdam, netherlands</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Second li -->
+                                <li>
+                                    <span class="text-uppercase">ams3</span>
+                                    <p class="text-capitalize">amsterdam, netherlands</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Third li -->
+                                <li>
+                                    <span class="text-uppercase">blr1</span>
+                                    <p class="text-capitalize">bangalore, india</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Fourth li -->
+                                <li>
+                                    <span class="text-uppercase">fra1</span>
+                                    <p class="text-capitalize">frankfurt, german</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Fiveth li -->
+                                <li>
+                                    <span class="text-uppercase">lon1</span>
+                                    <p class="text-capitalize">london, UK</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+
+                                <!-- Last li -->
+                                <li>
+                                    <span class="text-uppercase">nyc1</span>
+                                    <p class="text-capitalize">new york, USA</p>
+                                    <a class="text-right" href="#">Test Speed<span class="right-chevron text-center"><i class="fas fa-chevron-right"></i></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
