--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             <!-- Col Right / Form -->
                             <form action="#">
                                 <div class="form-group">
-                                    <label class="sr-only" id="Email" >Email address</label>
+                                    <label class="sr-only" for="input-email" >Email address</label>
                                     <input type="text" id="input-email" name="input-email" class="form-control"  placeholder="Email">
                                   </div>
                                   <div class="form-group">
-                                    <label class="sr-only" id="Password" >Email address</label>
+                                    <label class="sr-only" For="input-password" >Email address</label>
                                     <input type="text" id="input-password" name="input-password" class="form-control"  placeholder="Password">
                                   </div>
                             </form>
