--- a/index.html
+++ b/index.html
@@ -699,7 +699,9 @@
             </div>
         </div>
     </footer>
+    <!-- END FOOTER --> 
 
+    <!-- FIXED -->
     <div class="chat-fixed">
         <div class="fixed-image">
             <span class="round">2</span>
@@ -709,6 +711,5 @@
            <span>Can i help answer any question you have about DigitalOcean?</span>
         </div>
     </div>
-    <!-- END FOOTER -->    
 </body>
 </html>
