aggiunto hover e target in alcuni link

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 <img src="img/splunk.svg" alt="splunk">
                             </li>
                         </ul>
-                        <a class="lightblue-text" href="#"> View customer stories <span class="right-chevron"><i class="fas fa-chevron-right"></i></span> </a>
+                        <a target="_blank" class="lightblue-text" href="#"> View customer stories <span class="right-chevron"><i class="fas fa-chevron-right"></i></span> </a>
                     </div>
                 </div>
         </section>
